# XLauncher-ui

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  windows.yml
minecraft-launcher/: __init__.py  minecraft.py
minecraft_launcher/: confi_env.py  minecraft.py
views/: home.py  install.py  setting.py  user.py
